--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "**/*.js": {
             "when": "$(basename).ts"
         },
-        "node_modules": true
+        "node_modules": true,
+        ".next": true
     },
     "explorerExclude.backup": {}
 }
