--- a/package.json
+++ b/package.json
@@ -3,43 +3,46 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbo",
+        "dev": "next dev --turbo -p 3005",
         "build": "next build",
-        "start": "next start",
+        "start": "next start -p 3006",
         "lint": "next lint"
     },
     "dependencies": {
-        "@radix-ui/react-dialog": "^1.1.2",
-        "@radix-ui/react-dropdown-menu": "^2.1.2",
-        "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-navigation-menu": "^1.2.1",
-        "@radix-ui/react-scroll-area": "^1.2.0",
-        "@radix-ui/react-select": "^2.1.2",
-        "@radix-ui/react-separator": "^1.1.0",
-        "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-switch": "^1.1.1",
-        "@radix-ui/react-tabs": "^1.1.1",
-        "@radix-ui/react-toast": "^1.2.2",
-        "class-variance-authority": "^0.7.0",
+        "@radix-ui/react-dialog": "^1.1.6",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
+        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-navigation-menu": "^1.2.5",
+        "@radix-ui/react-scroll-area": "^1.2.3",
+        "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-separator": "^1.1.2",
+        "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-switch": "^1.1.3",
+        "@radix-ui/react-tabs": "^1.1.3",
+        "@radix-ui/react-toast": "^1.2.6",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "eslint": "^9.21.0",
         "lucide-react": "^0.456.0",
         "next": "15.0.3",
-        "next-themes": "^0.4.3",
+        "next-themes": "^0.4.4",
+        "punycode": "^2.3.1",
         "react": "19.0.0-rc-66855b96-20241106",
         "react-dom": "19.0.0-rc-66855b96-20241106",
-        "tailwind-merge": "^2.5.4",
-        "tailwindcss-animate": "^1.0.7"
+        "sharp": "^0.33.5",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7",
+        "update": "^0.4.2"
     },
     "devDependencies": {
         "@shadcn/ui": "^0.0.4",
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/node": "^20.17.23",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
         "autoprefixer": "^10.4.20",
-        "eslint": "^8",
         "eslint-config-next": "15.0.3",
-        "postcss": "^8.4.48",
-        "tailwindcss": "^3.4.14",
-        "typescript": "^5"
+        "postcss": "^8.5.3",
+        "tailwindcss": "^3.4.17",
+        "typescript": "^5.8.2"
     }
 }
