--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^4.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-navigation-menu": "^1.2.5",
+        "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-scroll-area": "^1.2.3",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
@@ -20,29 +22,47 @@
         "@radix-ui/react-switch": "^1.1.3",
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-toast": "^1.2.6",
+        "better-sqlite3": "^11.8.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "eslint": "^9.21.0",
+        "date-fns": "^4.1.0",
+        "eslint": "^9.22.0",
         "lucide-react": "^0.456.0",
         "next": "15.0.3",
-        "next-themes": "^0.4.4",
+        "next-themes": "^0.4.5",
         "punycode": "^2.3.1",
         "react": "19.0.0-rc-66855b96-20241106",
+        "react-day-picker": "^9.6.1",
         "react-dom": "19.0.0-rc-66855b96-20241106",
+        "react-hook-form": "^7.54.2",
         "sharp": "^0.33.5",
+        "sqlite": "^5.1.1",
+        "sqlite3": "^5.1.7",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
-        "update": "^0.4.2"
+        "update": "^0.4.2",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@shadcn/ui": "^0.0.4",
-        "@types/node": "^20.17.23",
+        "@types/better-sqlite3": "^7.6.12",
+        "@types/node": "^20.17.24",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
-        "autoprefixer": "^10.4.20",
+        "autoprefixer": "^10.4.21",
         "eslint-config-next": "15.0.3",
         "postcss": "^8.5.3",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.8.2"
+    },
+    "pnpm": {
+        "ignoredBuiltDependencies": [
+            "better-sqlite3",
+            "sqlite3"
+        ],
+        "onlyBuiltDependencies": [
+            "better-sqlite3",
+            "sqlite3"
+        ]
     }
 }
