--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "isolatedModules": true,
         "jsx": "preserve",
         "incremental": true,
+        "inlineSourceMap": false,
         "plugins": [
             {
                 "name": "next"
