--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^4.1.3",
+        "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-label": "^2.1.2",
@@ -22,6 +23,7 @@
         "@radix-ui/react-switch": "^1.1.3",
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-toast": "^1.2.6",
+        "@types/nodemailer": "^6.4.17",
         "better-sqlite3": "^11.8.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -29,7 +31,8 @@
         "eslint": "^9.22.0",
         "lucide-react": "^0.456.0",
         "next": "15.0.3",
-        "next-themes": "^0.4.5",
+        "next-themes": "^0.4.6",
+        "nodemailer": "^6.10.0",
         "punycode": "^2.3.1",
         "react": "19.0.0-rc-66855b96-20241106",
         "react-day-picker": "^9.6.1",
