[NEW][FIX]: create/update book with [is_preview]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "jsx": "preserve",
         "incremental": true,
         "inlineSourceMap": false,
+        "sourceMap": false,
         "plugins": [
             {
                 "name": "next"
