--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,13 @@
         "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-        "@typescript-eslint/no-unused-vars": "error",
-        "react-hooks/exhaustive-deps": "warn",
+        "@typescript-eslint/no-unused-vars": "off",
+        "react-hooks/exhaustive-deps": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "react/no-unescaped-entities": "off",
+        "@typescript-eslint/no-empty-object-type": "off",
         "no-console": [
-            "warn",
+            "off",
             {
                 "allow": [
                     "warn",
