--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "private": true,
     "scripts": {
         "dev": "next dev --turbo -p 3005",
+        "dev2": "next dev -p 3005",
         "build": "next build",
         "start": "next start -p 3006",
         "lint": "next lint"
     },
     "dependencies": {
         "@hookform/resolvers": "^4.1.3",
+        "@mux/mux-player-react": "^3.3.3",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -24,20 +26,23 @@
         "@radix-ui/react-tabs": "^1.1.3",
         "@radix-ui/react-toast": "^1.2.6",
         "@types/nodemailer": "^6.4.17",
-        "better-sqlite3": "^11.8.1",
+        "better-sqlite3": "^11.9.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
-        "eslint": "^9.22.0",
+        "epubjs": "^0.3.93",
+        "eslint": "^9.24.0",
+        "jszip": "3.10.1",
         "lucide-react": "^0.456.0",
         "next": "15.0.3",
         "next-themes": "^0.4.6",
         "nodemailer": "^6.10.0",
         "punycode": "^2.3.1",
         "react": "19.0.0-rc-66855b96-20241106",
-        "react-day-picker": "^9.6.2",
+        "react-day-picker": "^9.6.5",
         "react-dom": "19.0.0-rc-66855b96-20241106",
-        "react-hook-form": "^7.54.2",
+        "react-hook-form": "^7.55.0",
+        "react-reader": "^2.0.13",
         "sharp": "^0.33.5",
         "sqlite": "^5.1.1",
         "sqlite3": "^5.1.7",
@@ -48,23 +53,25 @@
     },
     "devDependencies": {
         "@shadcn/ui": "^0.0.4",
-        "@types/better-sqlite3": "^7.6.12",
-        "@types/node": "^20.17.24",
-        "@types/react": "^18.3.18",
-        "@types/react-dom": "^18.3.5",
+        "@types/better-sqlite3": "^7.6.13",
+        "@types/node": "^20.17.30",
+        "@types/react": "^18.3.20",
+        "@types/react-dom": "^18.3.6",
         "autoprefixer": "^10.4.21",
         "eslint-config-next": "15.0.3",
         "postcss": "^8.5.3",
         "tailwindcss": "^3.4.17",
-        "typescript": "^5.8.2"
+        "typescript": "^5.8.3"
     },
     "pnpm": {
         "ignoredBuiltDependencies": [
             "better-sqlite3",
+            "core-js",
             "sqlite3"
         ],
         "onlyBuiltDependencies": [
             "better-sqlite3",
+            "core-js",
             "sqlite3"
         ]
     }
