UPD: auth modals and book reading components with OptionsSidebar.

--- a/package.json
+++ b/package.json
@@ -73,7 +73,10 @@
         "onlyBuiltDependencies": [
             "better-sqlite3",
             "core-js",
-            "sqlite3"
+            "es5-ext",
+            "sharp",
+            "sqlite3",
+            "unrs-resolver"
         ]
     }
 }
