UPD: book components and API routes. NEW: Test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
         "node_modules": true,
         ".next": true
     },
-    "explorerExclude.backup": {}
+    "explorer.fileNesting.enabled": true,
+    "explorer.fileNesting.patterns": {
+        "*.ts": "${basename}.d.ts, ${basename}.js"
+    }
 }
