--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "dependencies": {
         "@hookform/resolvers": "^4.1.3",
         "@mux/mux-player-react": "^3.4.0",
-        "@radix-ui/react-avatar": "^1.1.7",
-        "@radix-ui/react-dialog": "^1.1.11",
-        "@radix-ui/react-dropdown-menu": "^2.1.12",
-        "@radix-ui/react-label": "^2.1.4",
-        "@radix-ui/react-navigation-menu": "^1.2.10",
-        "@radix-ui/react-popover": "^1.1.11",
-        "@radix-ui/react-scroll-area": "^1.2.6",
-        "@radix-ui/react-select": "^2.2.2",
-        "@radix-ui/react-separator": "^1.1.4",
-        "@radix-ui/react-slider": "^1.3.2",
-        "@radix-ui/react-slot": "^1.2.0",
-        "@radix-ui/react-switch": "^1.2.2",
-        "@radix-ui/react-tabs": "^1.1.9",
-        "@radix-ui/react-toast": "^1.2.11",
+        "@neondatabase/serverless": "^1.0.0",
+        "@radix-ui/react-avatar": "^1.1.9",
+        "@radix-ui/react-dialog": "^1.1.13",
+        "@radix-ui/react-dropdown-menu": "^2.1.14",
+        "@radix-ui/react-label": "^2.1.6",
+        "@radix-ui/react-navigation-menu": "^1.2.12",
+        "@radix-ui/react-popover": "^1.1.13",
+        "@radix-ui/react-scroll-area": "^1.2.8",
+        "@radix-ui/react-select": "^2.2.4",
+        "@radix-ui/react-separator": "^1.1.6",
+        "@radix-ui/react-slider": "^1.3.4",
+        "@radix-ui/react-slot": "^1.2.2",
+        "@radix-ui/react-switch": "^1.2.4",
+        "@radix-ui/react-tabs": "^1.1.11",
+        "@radix-ui/react-toast": "^1.2.13",
         "@types/nodemailer": "^6.4.17",
         "better-sqlite3": "^11.9.1",
         "class-variance-authority": "^0.7.1",
@@ -41,7 +42,7 @@
         "react": "19.0.0-rc-66855b96-20241106",
         "react-day-picker": "^9.6.7",
         "react-dom": "19.0.0-rc-66855b96-20241106",
-        "react-hook-form": "^7.56.1",
+        "react-hook-form": "^7.56.2",
         "react-reader": "^2.0.13",
         "sharp": "^0.33.5",
         "sqlite": "^5.1.1",
@@ -50,13 +51,13 @@
         "tailwindcss-animate": "^1.0.7",
         "update": "^0.4.2",
         "uuid": "^11.1.0",
-        "zod": "^3.24.3"
+        "zod": "^3.24.4"
     },
     "devDependencies": {
         "@shadcn/ui": "^0.0.4",
         "@types/better-sqlite3": "^7.6.13",
-        "@types/node": "^20.17.32",
-        "@types/react": "^18.3.20",
+        "@types/node": "^20.17.43",
+        "@types/react": "^18.3.21",
         "@types/react-dom": "^18.3.7",
         "autoprefixer": "^10.4.21",
         "eslint-config-next": "15.0.3",
