--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         "@typescript-eslint/no-explicit-any": "off",
         "react/no-unescaped-entities": "off",
         "@typescript-eslint/no-empty-object-type": "off",
+        "@next/next/no-img-element": "off",
         "no-console": [
             "off",
             {
