--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev2": "next dev -p 3005",
         "build": "next build",
         "start": "next start -p 3006",
-        "lint": "next lint"
+        "lint": "next lint",
+        "check-env": "node scripts/check-env.js",
+        "devENV": "node -r ./scripts/check-env.js ./node_modules/.bin/next dev --turbo -p 3005"
     },
     "dependencies": {
         "@hookform/resolvers": "^4.1.3",
@@ -32,6 +34,7 @@
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "dompurify": "^3.2.5",
+        "dotenv": "^16.5.0",
         "eslint": "^9.26.0",
         "jszip": "3.10.1",
         "lucide-react": "^0.456.0",
