--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@mux/mux-player-react": "^3.4.0",
         "@neondatabase/serverless": "^1.0.0",
         "@radix-ui/react-avatar": "^1.1.9",
+        "@radix-ui/react-checkbox": "^1.3.1",
         "@radix-ui/react-dialog": "^1.1.13",
         "@radix-ui/react-dropdown-menu": "^2.1.14",
         "@radix-ui/react-label": "^2.1.6",
@@ -29,33 +30,36 @@
         "@radix-ui/react-switch": "^1.2.4",
         "@radix-ui/react-tabs": "^1.1.11",
         "@radix-ui/react-toast": "^1.2.13",
+        "@tanstack/react-query": "^5.76.1",
+        "@types/color": "^4.2.0",
         "@types/nodemailer": "^6.4.17",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "color": "^5.0.0",
         "date-fns": "^4.1.0",
-        "dompurify": "^3.2.5",
+        "dompurify": "^3.2.6",
         "dotenv": "^16.5.0",
-        "eslint": "^9.26.0",
+        "eslint": "^9.27.0",
         "jszip": "3.10.1",
         "lucide-react": "^0.456.0",
         "next": "15.0.3",
         "next-themes": "^0.4.6",
         "nodemailer": "^6.10.1",
         "react": "19.0.0-rc-66855b96-20241106",
-        "react-day-picker": "^9.6.7",
+        "react-day-picker": "^9.7.0",
         "react-dom": "19.0.0-rc-66855b96-20241106",
-        "react-hook-form": "^7.56.3",
+        "react-hook-form": "^7.56.4",
         "sharp": "^0.33.5",
         "sqlite": "^5.1.1",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "update": "^0.4.2",
         "uuid": "^11.1.0",
-        "zod": "^3.24.4"
+        "zod": "3.24.4"
     },
     "devDependencies": {
         "@shadcn/ui": "^0.0.4",
-        "@types/node": "^20.17.46",
+        "@types/node": "^20.17.48",
         "@types/react": "^18.3.21",
         "@types/react-dom": "^18.3.7",
         "autoprefixer": "^10.4.21",
