--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "autoprefixer": "^10.4.21",
         "eslint-config-next": "15.0.3",
         "postcss": "^8.5.3",
+        "punycode-detector": "^1.0.4",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.8.3"
     },
