refactor: split large db.ts and HTML5Player into modular components

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ db/dump-REMOVE-postgreSQL.sql
 to_implement.md
 public/_epub
 db
+!src/lib/db
 scripts/check-env.js
 .claude/settings.local.json
 AUDIT_REPORT_20250930.md
