chore: update VSCode settings and adjust CSS theme variables for borders and rings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     },
     "explorer.fileNesting.enabled": true,
     "explorer.fileNesting.patterns": {
-        "*.ts": "${basename}.d.ts, ${basename}.js"
-    }
+        "*.d.ts": "${basename}.ts, ${basename}.js"
+    },
+    "css.lint.unknownAtRules": "ignore"
 }
