--- a/.gitignore
+++ b/.gitignore
@@ -33,17 +33,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-#public/covers/*
-
 _docs
 
 db/_*.sql
@@ -56,17 +45,20 @@ db/_archived
 # pnpm
 pnpm-lock.yaml
 
-^*.md
 tmp
 db/books - Copy.db3
 #db/dump-postgreSQL.sql
 db/dump.sql
 db/dump-REMOVE-postgreSQL.sql
 
-to_implement.md
 public/_epub
 db
 !src/lib/db
 scripts/check-env.js
 .claude/settings.local.json
-CLAUDE.md
+
+#^*.md
+#to_implement.md
+# CLAUDE.md
+
+.env*
