--- a/package.json
+++ b/package.json
@@ -13,61 +13,57 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^4.1.3",
-        "@mux/mux-player-react": "^3.4.0",
-        "@neondatabase/serverless": "^1.0.0",
-        "@radix-ui/react-avatar": "^1.1.9",
-        "@radix-ui/react-checkbox": "^1.3.1",
-        "@radix-ui/react-dialog": "^1.1.13",
-        "@radix-ui/react-dropdown-menu": "^2.1.14",
-        "@radix-ui/react-label": "^2.1.6",
-        "@radix-ui/react-navigation-menu": "^1.2.12",
-        "@radix-ui/react-popover": "^1.1.13",
-        "@radix-ui/react-scroll-area": "^1.2.8",
-        "@radix-ui/react-select": "^2.2.4",
-        "@radix-ui/react-separator": "^1.1.6",
-        "@radix-ui/react-slider": "^1.3.4",
-        "@radix-ui/react-slot": "^1.2.2",
-        "@radix-ui/react-switch": "^1.2.4",
-        "@radix-ui/react-tabs": "^1.1.11",
-        "@radix-ui/react-toast": "^1.2.13",
-        "@tanstack/react-query": "^5.76.1",
+        "@mux/mux-player-react": "^3.6.1",
+        "@neondatabase/serverless": "^1.0.2",
+        "@radix-ui/react-avatar": "^1.1.10",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-navigation-menu": "^1.2.14",
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-scroll-area": "^1.2.10",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slider": "^1.3.6",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.2.6",
+        "@radix-ui/react-tabs": "^1.1.13",
+        "@radix-ui/react-toast": "^1.2.15",
+        "@tanstack/react-query": "^5.90.5",
         "@types/color": "^4.2.0",
-        "@types/nodemailer": "^6.4.17",
+        "@types/nodemailer": "^6.4.20",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "color": "^5.0.0",
+        "color": "^5.0.2",
         "date-fns": "^4.1.0",
-        "dompurify": "^3.2.6",
-        "dotenv": "^16.5.0",
-        "eslint": "^9.27.0",
-        "jszip": "3.10.1",
+        "dompurify": "^3.3.0",
+        "eslint": "^9.38.0",
         "lucide-react": "^0.456.0",
-        "next": "15.0.3",
+        "next": "15.5.6",
         "next-themes": "^0.4.6",
         "nodemailer": "^6.10.1",
-        "react": "19.0.0-rc-66855b96-20241106",
-        "react-day-picker": "^9.7.0",
-        "react-dom": "19.0.0-rc-66855b96-20241106",
-        "react-hook-form": "^7.56.4",
+        "react": "^19.2.0",
+        "react-day-picker": "^9.11.1",
+        "react-dom": "^19.2.0",
+        "react-hook-form": "^7.65.0",
         "sharp": "^0.33.5",
-        "sqlite": "^5.1.1",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
-        "update": "^0.4.2",
         "uuid": "^11.1.0",
         "zod": "3.24.4"
     },
     "devDependencies": {
         "@shadcn/ui": "^0.0.4",
-        "@types/node": "^20.17.48",
-        "@types/react": "^18.3.21",
-        "@types/react-dom": "^18.3.7",
+        "@types/node": "^20.19.22",
+        "@types/react": "^19.0.0",
+        "@types/react-dom": "^19.0.0",
         "autoprefixer": "^10.4.21",
-        "eslint-config-next": "15.0.3",
-        "postcss": "^8.5.3",
+        "eslint-config-next": "15.5.6",
+        "postcss": "^8.5.6",
         "punycode-detector": "^1.0.4",
-        "tailwindcss": "^3.4.17",
-        "typescript": "^5.8.3"
+        "tailwindcss": "^3.4.18",
+        "typescript": "^5.9.3"
     },
     "pnpm": {
         "ignoredBuiltDependencies": [
