``` feat: replace BookOpen icon with animated BookWithSign component and update gitignore
- Replace static BookOpen icon with custom BookWithSign component in book collection controls
- Add CSS variables for icon colors in light and dark modes (gold and text)
- Define global icon animations (draw lines and glow pulse)
- Add smooth scroll behavior with reduced motion support
- Update .gitignore to exclude .windsurf and .claude directories
- Remove unused BookOpen import from lucide-react
```

--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,6 @@ db/dump-REMOVE-postgreSQL.sql
 db
 !src/lib/db
 scripts/check-env.js
-.claude/settings.local.json
 
 #^*.md
 #to_implement.md
@@ -66,3 +65,5 @@ AUDIT.md
 CLAUDE.md
 favicon.svg
 logo.svg
+.windsurf
+.claude
