--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
     "eslint": "^9.38.0",
+    "immer": "^11.1.3",
     "lucide-react": "^0.456.0",
     "next": "15.5.9",
     "next-themes": "^0.4.6",
@@ -51,7 +52,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
-    "zod": "3.24.4"
+    "zod": "3.24.4",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
